Updated the styling for homepage and update and fixed so archived is visible

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,13 +6,32 @@ body, * {
     padding: 0;
 }
 
-.home {
+.home__title {
     margin: 1rem;
+}
 
+.home__wrapper {
+    display: flex;
+    flex-direction: row;
 }
 
 .home__link {
-    
+    margin: 1rem;
+}
+
+.home__icon--back {
+    display: inline;
+    margin-left: 1rem;
+    margin-top: 14px;
+    width: 10px;
+    height: 10px;
+}
+
+.home__icon--plus {
+    margin-top: 14px;
+    display: inline;
+    width: 10px;
+    height: 10px;
 }
 
 .cards {
@@ -35,10 +54,14 @@ body, * {
     font-size: 1rem;
 }
 
+table {
+    width: 100%;
+}
+
 .form-wrapper {
     font-size: 18px;
     max-width: 768px;
-    margin: 2rem auto;
+    margin: 1rem;
     padding: 2rem;
     border: solid 1px lightgrey;
     border-radius: 15px;
